Displayed your attack dps for better clarity Fixed the upgrade weapon button to be more visible and stacked the buttons

--- a/src/app/components/player-stats/player-stats.component.css
+++ b/src/app/components/player-stats/player-stats.component.css
@@ -17,3 +17,12 @@
   border: 1px solid #666;
   border-radius: 5px;
 }
+
+.red {
+  background-color: #ff5555;
+}
+
+.rows {
+  display: flex;
+  flex-direction: column;
+}
